# pygame-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml
examples/: appstats_example.py  events_example.py  registry_example.py  timer_example.py  tween_example.py
pygame_utils/: __init__.py  appstats.py  easing.py  events.py  logger.py  pool.py  registry.py  stopwatch.py  texturepacker.py  timer.py  tween.py
tests/: test_appstats.py  test_events.py
